<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.buschmais.mobile.redmine.view.issues.IssuesPerStatusFragment" >

    <FrameLayout
        android:id="@+id/chartContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxStatusNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/rectangle_new"
                android:checked="true"
                android:text="@string/issues_status_new" />

            <CheckBox
                android:id="@+id/checkBoxStatusInProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/rectangle_in_progress"
                android:checked="true"
                android:text="@string/issues_status_in_progress" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxStatusResolved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/rectangle_resolved"
                android:checked="true"
                android:text="@string/issues_status_resolved" />

            <CheckBox
                android:id="@+id/checkBoxStatusFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/rectangle_feedback"
                android:checked="true"
                android:text="@string/issues_status_feedback" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxStatusClosed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/rectangle_closed"
                android:checked="true"
                android:text="@string/issues_status_closed" />

            <CheckBox
                android:id="@+id/checkBoxStatusRejected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@drawable/rectangle_rejected"
                android:checked="true"
                android:text="@string/issues_status_rejected" />
        </TableRow>
    </TableLayout>

</LinearLayout>